package C2S;

message RegisterAccount {
	optional uint64 id = 1 [default=1415117601];
	required string k_id = 2;
} // end

message UnregisterAccount {
	optional uint64 id = 1 [default=1296626420];
	required string k_id = 2;
} // end

message LoadUserInfo {
	optional uint64 id = 1 [default=67040062];
	required string k_id = 2;
} // end

message CheckInCharge {
	optional uint64 id = 1 [default=770373176];
	required string k_id = 2;
} // end

message StartGame {
	optional uint64 id = 1 [default=285274112];
	required string k_id = 2;
	optional int32 selected_character = 3 [default=0];
	optional int32 selected_assistant = 4 [default=0];
} // end

message EndGame {
	optional uint64 id = 1 [default=1441135488];
	required string k_id = 2;
	optional int32 dist = 3 [default=0];
	optional int32 kill = 4 [default=0];
	optional int32 usedItem = 5 [default=0];
} // end

message LoadRankInfo {
	optional uint64 id = 1 [default=67040062];
	required string k_id = 2;
} // end

message RequestPointReward {
	optional uint64 id = 1 [default=618593180];
	required string k_id = 2;
	optional int32 point = 3 [default=0];
} // end
