package C2G;

message VersionInfo {
	optional uint64 id = 1 [default=391770];
	optional string version = 2 [default="0.1.2"];
} // end

message RegisterAccount {
	optional uint64 id = 1 [default=1376019];
	required string k_id = 2;
} // end

message UnregisterAccount {
	optional uint64 id = 1 [default=2358542];
} // end

message Login {
	optional uint64 id = 1 [default=12322730];
	required string k_id = 2;
} // end

message Logout {
	optional uint64 id = 1 [default=389941];
} // end

message CheckInCharge {
	optional uint64 id = 1 [default=390853];
} // end

message SelectCharacter {
	optional uint64 id = 1 [default=1179073];
	required int32 selected_character = 2;
} // end

message StartGame {
	optional uint64 id = 1 [default=391039];
} // end

message EndGame {
	optional uint64 id = 1 [default=6420788];
	required int32 score = 2;
	required int32 dist = 3;
	required int32 enemy_kill = 4;
	required int32 play_time = 5;
	required int32 coin = 6;
} // end

message LoadRankInfo {
	optional uint64 id = 1 [default=7468663];
} // end

message LoadPostedEnergy {
	optional uint64 id = 1 [default=6420424];
} // end

message LoadPostedBaton {
	optional uint64 id = 1 [default=4453821];
} // end

message LoadPostedBatonResult {
	optional uint64 id = 1 [default=5501884];
} // end

message BuyItem {
	optional uint64 id = 1 [default=5503699];
	required Item item = 2;

	enum Item {
		SHIELD = 1;
		ITEM_LAST = 2;
		GHOSTIFY = 3;
		IMMORTAL = 4;
		EXP_BOOST = 5;
		RANDOM = 6;
		MAX = 7;
	}
} // end

message BuyOrUpgradeCharacter {
	optional uint64 id = 1 [default=7468656];
	required int32 character = 2;
} // end

message SendEnergy {
	optional uint64 id = 1 [default=5502145];
	required string receiver_k_id = 2;
} // end

message AcceptEnergy {
	optional uint64 id = 1 [default=10484584];
	required string sender_k_id = 2;
	required int64 sended_time = 3;
} // end

message RequestBaton {
	optional uint64 id = 1 [default=11532354];
	required string receiver_k_id = 2;
	required string map = 3;
	required int32 score = 4;
} // end

message AcceptBaton {
	optional uint64 id = 1 [default=4520985];
	required string sender_k_id = 2;
	required int64 sended_time = 3;
} // end

message EndBaton {
	optional uint64 id = 1 [default=6551479];
	required string sender_k_id = 2;
	required int64 sended_time = 3;
	required int32 score = 4;
	required int32 dist = 5;
	required int32 enemy_kill = 6;
	required int32 play_time = 7;
	required int32 coin = 8;
} // end

message AcceptBatonResult {
	optional uint64 id = 1 [default=4520520];
	required string sender_k_id = 2;
	required int64 sended_time = 3;
} // end

message UpgradeFactor {
	optional uint64 id = 1 [default=2555106];
	required int32 factor = 2;
} // end

message InviteFriend {
	optional uint64 id = 1 [default=3601985];
	required string friend_k_id = 2;
} // end

message LoadReward {
	optional uint64 id = 1 [default=2554651];
	required Reward reward = 2;

	enum Reward {
		INVITE_10_REWARD = 1;
		INVITE_15_REWARD = 2;
		INVITE_30_REWARD = 3;
		MAX = 4;
	}
} // end

message BuyCostume {
	optional uint64 id = 1 [default=7600427];
	required CostumeCategory category = 2;
	required int32 costume_id = 3;

	enum CostumeCategory {
		HEAD = 1;
		TOP = 2;
		BOTTOMS = 3;
		BACK = 4;
		MAX = 5;
	}
} // end

message WearCostume {
	optional uint64 id = 1 [default=3603343];
	required CostumeCategory category = 2;
	required int32 costume_id = 3;
	required int32 character_id = 4;

	enum CostumeCategory {
		HEAD = 1;
		TOP = 2;
		BOTTOMS = 3;
		BACK = 4;
		MAX = 5;
	}
} // end

message DrawFirst {
	optional uint64 id = 1 [default=12580588];
} // end

message DrawSecond {
	optional uint64 id = 1 [default=9632019];
	required bool draw = 2;
} // end

message EquipGhost {
	optional uint64 id = 1 [default=653848];
	required int32 room_number = 2;
	required int32 ghost_id = 3;
} // end

message UnequipGhost {
	optional uint64 id = 1 [default=651576];
	required int32 room_number = 2;
} // end

message PurchaseRoom {
	optional uint64 id = 1 [default=3669680];
	required int32 room_number = 2;
} // end
